[tool.poetry]
name = "percvre"
version = "1.0.0"
description = "A personal CV app written in Python with Django."
authors = ["Athena Wolfskämpf <athena@wolfskaempf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
environs = "^11.0.0"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
